1.2.0: Java 1.8 compatibility - There is now an alert when the program is running on a lower Java version than Minecraft's required. - Now converting specified paths to absolute paths (caused issues).